Create new Route All Sessions
